<resources>

    <string name="app_name">SAGAL</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main_activity_view_farms">SAGAL</string>
    <string name="tvMainActivityTitle">Tus haciendas</string>
    <string name="bCreateFarm">Nueva hacienda</string>
    <string name="title_activity_farm_details">FarmDetails</string>
    <string name="tvFarmDetailsTitle">Detalles de hacienda</string>
    <string name="tvFarmNameTitle">Nombre: </string>
    <string name="tvFarmAddressTitle">Ubicación: </string>
    <string name="tvFarmOwnerTitle">Propietario: </string>
    <string name="bviewCattle">Ver ganado</string>
    <string name="bFoothbath">Pediluvios</string>
    <string name="bStatistics">Estadísticas</string>
    
    <string name="bDeleteFarm">Borrar Hacienda</string>
    <string name="bEditFarm">Editar Hacienda</string>
    
    <string name="tvCreateFarmTitle">Registrar hacienda</string>
    <string name="etFarmName">Nombre</string>
    <string name="etFarmOwner">Propietario</string>
    <string name="etFarmAddress">Ubicación</string>
    
    <string name="bOK">OK</string>
    <string name="bCancel">Cancelar</string>
    
    <string name="tvViewCattleTitle">Ganado hacienda \'nombre\'</string>
    <string name="bCreateCow">Nuevo ejemplar</string>
    
    <string name="tvCattleDetailsTitle">Detalles del ganado:</string>
    <string name="tvCowName">Nombre: </string>
    <string name="etCowName">Nombre</string>
    <string name="tvCowNumber">Número:</string>
    <string name="etCowNumber">Número</string>
    <string name="tvCowOwner">Propietario:</string>
    <string name="etCowOwner">Propietario</string>
    <string name="tvCowBreed">Raza:</string>
    <string name="etCowBreed">Raza</string>
    <string name="tvCowBirthday">Fecha de nacimiento:</string>
    <string name="etCowBirthday">dd-mm-aaaa</string>
    <string name="bReset">Borrar todo</string>
    
    <string name="bEditCowDetails">Editar ejemplar</string>
    <string name="bDeleteCow">Borrar ejemplar</string>
    <string name="bLocomotionScoring">Registrar puntaje de locomoción</string>
    <string name="bHoofInjury">Registrar lesiones</string>
    
    <string name="tvFrontLeft">Anterior izquierda</string>
    <string name="tvFrontRight">Anterior derecha</string>
    <string name="tvRearLeft">Posterior izquierda</string>
    <string name="tvRearRight">Posterior derecha</string>
    
    <string name="tvActivityInjuryTitle">Zonas y enfermedad</string>

    <string name="bSelectInjuries">Seleccionar enfermedades</string>
    <string name="bAddNotes">Agregar notas</string>
    
    <string name="tvActivityAddNotesTitle">Agregar notas a ejemplar</string>
    <string name="tvListOfFindings">Lista de hallazgos</string>
    <string name="tvListOfProblems">Lista de problemas</string>
    <string name="tvDifferentialDiagnoses">Diag. diferenciales</string>
    <string name="tvRegimens">Plan terapéutico</string>
    
    <string name="tvLocomotionScoringTitle">Puntaje de locomoción</string>
    <string name="tvLocSocoring">Puntaje de locomoción</string>
    
    <string name="spinnerHoofSections">Zona</string>
    <string-array name="hoofSections">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
		<item>7</item>
		<item>8</item>
		<item>9</item>
		<item>10</item>
    </string-array>

    <string name="spinnerLocomotionScoring">Puntaje de locomoción</string>
    <string-array name="locScoring">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="tvFarmEditTitle">Editar Hacienda</string>
    <string name="tvCreateFootbathTitle">Registrar Pediluvio</string>
    <string name="cantidad">"Cantidad de \nmedicamento: "</string>
         <string name="fecha_de_nacimiento">"Fecha de\nnacimiento: "</string>
    <string name="puntaje_de_locomocion">Puntaje de \nLocomoción:</string>
    <string name="destino_final">Destino \nFinal: </string>
    
    
    <!-- Radio Buttons-->
    <string name="radioFormol">Formol (3%)</string>
    <string name="radioCuSO4">CuSO4 (2%)</string>
    <string name="radioHipocloritoDeSodio">Hipoclorito de Sodio (1%)</string>
    <string name="radioOTC">OTC (5%)</string>
    
    <string name="radioLocomotionScoringByFarm">Puntaje de locomoción del hato</string>
    <string name="radioInjuries">Lesiones encontradas en el hato</string>
    <string name="radioLocomotionScoringByCow">Puntaje de locomoción de un ejemplar</string>

    
</resources>