<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/tableFarmCreate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvCreateFarmTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:text="@string/tvCreateFarmTitle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TableRow android:id="@+id/tableRow1" >

            <TextView
                android:id="@+id/tvFarmOwner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvFarmOwnerTitle"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/etFarmOwner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/etFarmOwner"
                android:capitalize="words" />

            <requestFocus />
        </TableRow>

        <TableRow android:id="@+id/tableRow3" >

            <TextView
                android:id="@+id/tvFarmName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvFarmNameTitle"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/etFarmName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/etFarmName"
                android:capitalize="words" >
            </EditText>
        </TableRow>

        <TableRow android:id="@+id/tableRow2" >

            <TextView
                android:id="@+id/tvFarmAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvFarmAddressTitle"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/etFarmAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/etFarmAddress"
                android:capitalize="words" />
        </TableRow>

        <Button
            android:id="@+id/bOkCreateFarmView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="ok"
            android:text="@string/bOK" />
    </TableLayout>

</ScrollView>