<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvFarmEditTitle"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/tvFarmEditTitle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TableRow android:id="@+id/tableRow1" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvFarmOwnerTitle"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/etFarmOwnerEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:capitalize="words" />

            <requestFocus />
        </TableRow>

        <TableRow android:id="@+id/tableRow2" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvFarmNameTitle"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/etFarmNameEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:capitalize="words" >
            </EditText>
        </TableRow>

        <TableRow android:id="@+id/tableRow3" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvFarmAddressTitle"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/etFarmAddressEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:capitalize="words" />
        </TableRow>

        <TableRow android:id="@+id/tableRow4" >

            <Button
                android:id="@+id/bOkFarmEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bOK" />

            <Button
                android:id="@+id/bCancelFarmEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bCancel" />
        </TableRow>
    </TableLayout>

</ScrollView>